--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,18 +1,15 @@
 .footer {
   background-color: var(--color-section);
-  width: 480px;
-  height: 603px;
+  
 
   margin-left: auto;
   margin-right: auto;
   padding: 60px 0;
-  @media screen and (min-width: 768px) {
-    width: 768px;
-    height: 464px;
-  }
+  max-width: 1600px;
+  
     @media screen and (min-width: 1200px) {
-      width: 1600px;
-      height: auto;
+      
+      
 
     }
   &__display {
@@ -80,6 +77,9 @@
     @media screen and (min-width: 1200px) {
      flex-wrap: nowrap;
   text-align: left;
+  
+  
+  
     }
 }
 
