--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -18,7 +18,9 @@
   border-radius: 0px 0px 4px 4px;
   padding-bottom: 30px;
   background-color: var(--color-primary);
-  margin-bottom: 30px;
+  @media screen and (max-width: 768px) {
+      margin-bottom: 30px;
+    }
   @media screen and (min-width: 768px) {
     width: 354px;
     height: 536px;
@@ -27,7 +29,16 @@
  height: auto;
      }
 }
+.team__flex img{
 
+  @media screen and (max-width: 1200px) {
+      height: 374px;
+    }
+        @media screen and (max-width: 768px) {
+          height: 460px;
+          width: 450px;
+        }
+}
 .team {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -36,7 +47,7 @@
   //   width: 768px;
   // }
          @media screen and (min-width: 1200px) {
-           width: 1600px;
+           
           margin-left: auto;
             margin-right: auto;
          }
